Release notes for production domapp -- jacobsen@npxdesigns.com


domapp V00-02-01  11/23/2005
	Requires DOM-MB version 403

Upgrades/bug fixes:
- update compressed data format per documentation & phone
  call discussions
- Add format ID to supernova data to make consistent with
  monitoring stream.

=========================================================

domapp V00-02-00  11/10/2005
	Requires DOM-MB version 400

Upgrades/bug fixes:
- minor cleanup of pong debugging cruft.
- This version links against DOM-MB rel-400

=========================================================
domapp V00-01-00  10/17/2005
       Requires domapp.sbi: 281, DOM-MB packages domapp-101

Upgrades/bug fixes: None.  This version just links against the 
"official" domapp branch of DOM-MB.

=========================================================
domapp V00-00-12  8/31/2005
       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-12

Upgrades/bug fixes
* Fix flasher run startup

=========================================================
domapp V00-00-11  8/29/2005
       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-11
       Test with domapp-tools (DMT) V00-00-08

Upgrades/bug fixes
* Lookback memory non-cached, prevents races with FPGA when 
  writing/clearing LBM ("missing hit" problem fixed).
* In pedestal collection code, remove extra launch added in 
  domapp V00-00-10.

=========================================================
domapp V00-00-10  8/16/2005
       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-10
       Test with domapp-tools (DMT) V00-00-07

Upgrades/bug fixes
* When collecting SPE data, perform extra launch and wait for 
  TWO events in lookback memory before proceeding

=========================================================
domapp V00-00-09  8/11/2005
       Requires domapp.sbi: 264, DOM-MB packages domapp-V00-00-09
       Test with domapp-tools (DMT) V00-00-07

Upgrades/bug fixes
* New FPGA design, per Thorsten: